<resources>
    <string name="app_name">Weathy</string>
    <string name="erroe_query">Error</string>
    <string name="gps_changed">GPSChanged</string>
    <string name="first_query_complete">FirstQueryComplete</string>
    <string name="service_complete">SerciveComplete</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_city_match"> No cities match your search query!</string>
    <string name="bulgaria_string">Bulgaria</string>
    <string name="search_for_location_hint">Search for location...</string>
    <string name="not_available">N/A</string>
    <string name="clear">Clear</string>
    <string name="clouds">Clouds</string>
    <string name="thunderstorm">Thunderstorm</string>
    <string name="rain">Rain</string>
    <string name="you_did_some_wrong">You did something wrong!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Search</string>
    <string name="sunset">Sunset:</string>
    <string name="sunrise">Sunrise:</string>
    <string name="back">BACK</string>
    <string name="gps">GPS</string>
    <string name="sofia">Sofia</string>
    <string name="plovdiv">Plovdiv</string>
    <string name="varna">Varna</string>
    <string name="ruse">Ruse</string>
    <string name="burgas">Burgas</string>
    <string name="pleven">Pleven</string>
    <string name="search">search</string>
    <string name="air_pressure">Air pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="visibility">Visibility:</string>
    <string name="sunset_sunrise">Sunset:</string>
    <string name="day_length">Day length:</string>
    <string name="_10_day_forecast">10-Day forecast</string>
    <string name="condition">Condition |</string>
    <string name="max_temperature">Max temperature |</string>
    <string name="min_temperature">Min temperature |</string>
    <string name="wind_speed">Wind speed |</string>
    <string name="humidity_tdf">Humidity |</string>
    <string name="day_of_the_year">Day of the year |</string>
    <string name="_24_hour_forecast">24-Hour Forecast</string>
    <string name="current_temperature">Current temperature |</string>
    <string name="feels_like">Feels like |</string>
    <string name="air_pressure_ohf">Air pressure |</string>
    <string name="feels_like_ohv">Feels like:</string>
    <string name="feels">Feels:</string>
    <string name="wind">Wind:</string>
    <string name="today">Today</string>
    <string name="weathy">Weathy</string>
    <string name="humidity_tff">Humidity |</string>


    <string name="db_cityName">cityName</string>
    <string name="db_current_temp">currentTemp</string>
    <string name="db_condition">condition</string>
    <string name="db_temp_min">temp_min</string>
    <string name="db_temp_max">temp_max</string>
    <string name="db_sunrise">sunrise</string>
    <string name="db_sunset">sunset</string>
    <string name="db_wind_speed">windSpeed</string>
    <string name="db_humidity">humidity</string>
    <string name="db_pressure">pressure</string>
    <string name="db_feels_like">feels_like</string>
    <string name="db_visibility">visibility</string>
    <string name="db_last_update">last_update</string>
    <string name="db_day_length">day_length</string>
    <string name="db_date">date</string>
    <string name="db_time">time</string>

</resources>
