<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/activity_search">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <Button
            android:id="@+id/back_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@drawable/left_button_shape"
            android:text="@string/back"/>

        <Button
            android:id="@+id/gps_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gps"
            android:textColor="@android:color/white"
            android:background="@drawable/right_button_shape"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp">

        <fragment
            android:id="@+id/place_fragment"
            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.v7.widget.CardView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_above="@+id/middle_row"
            android:gravity="center">
            <Button
                android:id="@+id/sofia_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textColor="@android:color/white"
                android:background="@drawable/city_button_shape"
                android:layout_height="wrap_content"
                android:text="@string/sofia"/>

            <Button
                android:id="@+id/plovdiv_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textColor="@android:color/white"
                android:background="@drawable/city_button_shape"
                android:layout_height="wrap_content"
                android:text="@string/plovdiv" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/middle_row"
            android:layout_above="@+id/bottom_row"
            android:gravity="center">
            <Button
                android:id="@+id/varna_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textColor="@android:color/white"
                android:background="@drawable/city_button_shape"
                android:layout_height="wrap_content"
                android:text="@string/varna"/>

            <Button
                android:id="@+id/ruse_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textColor="@android:color/white"
                android:background="@drawable/city_button_shape"
                android:layout_height="wrap_content"
                android:text="@string/ruse" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/bottom_row"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/burgas_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textColor="@android:color/white"
                android:background="@drawable/city_button_shape"
                android:layout_height="wrap_content"
                android:text="@string/burgas"/>

            <Button
                android:id="@+id/pleven_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textColor="@android:color/white"
                android:background="@drawable/city_button_shape"
                android:layout_height="wrap_content"
                android:text="@string/pleven" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>

